@@ -150,6 +150,7 @@ table {
   --color: var(--default-color);
   --border-width: var(--default-border-width);
   --border-color: var(--default-border-color);
+  --text-decoration-color: currentColor;
   --text-decoration-thickness: auto;
   --text-underline-offset: auto;
 
@@ -527,6 +528,8 @@ hr {
 .ul\:hover:hover,
 .anchor:hover .ul\:hover {
   text-decoration: underline;
+  -webkit-text-decoration-color: var(--text-decoration-color);
+  text-decoration-color: var(--text-decoration-color);
   text-decoration-thickness: var(--text-decoration-thickness);
   text-underline-offset: var(--text-underline-offset);
 }
