@@ -63,6 +63,7 @@
 .ul\:hover:hover,
 .anchor:hover .ul\:hover {
   text-decoration: underline;
+  text-decoration-color:     var(--text-decoration-color);
   text-decoration-thickness: var(--text-decoration-thickness);
   text-underline-offset:     var(--text-underline-offset);
 }
