@@ -13,6 +13,7 @@
   --color: var(--default-color);
   --border-width: var(--default-border-width);
   --border-color: var(--default-border-color);
+  --text-decoration-color: currentColor;
   --text-decoration-thickness: auto;
   --text-underline-offset: auto;
 
