@@ -5,6 +5,7 @@
   * (copy) remove depreciated vars
   * (border) br to border-radius
   * (type) update rlh variables
+  * (type) text-decoration-color
 
 # 0.18.0 (2021-11-18)
 
